# brain-unfuck

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
src/: brain-unfuck.c  cli.rs  defs.h  interpreter.c  interpreter.rs  lib.rs  main.rs  os_defs.h  shell.c  terminal.rs  utilities.c
tests/: cli.rs  differential.sh  feature-matrix.sh  test_cli.sh
